# forja-gui-rt

./: .gitignore  Cargo.toml  README.md
src/: accessibility.rs  animated_widgets.rs  animation_root.rs  canvas_widget.rs  chart_widgets.rs  evaluador.rs  gesture_widgets.rs  gui_nativa.rs  icons.rs  lib.rs  pickers.rs  qr_widget.rs  shadow_widget.rs  signals.rs  svg_icon_widget.rs
src/theme/: animation.rs  color.rs  dynamic_color.rs  elevation.rs  mod.rs  motion.rs  palette.rs  scheme.rs  shape.rs  state.rs  system_theme.rs  typography.rs
