[package]
name = "forja-gui-rt"
version = "0.1.0"
edition = "2021"
description = "Forja GUI Runtime — Pre-compila xilem para compilación rápida de apps GUI"

[dependencies]
xilem = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
forja = { path = "../.." }
chrono = "0.4"
qrcode = "0.14"
image = "0.25"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "android")'.dependencies.winit]
version = "0.30.13"
features = ["android-native-activity"]
